# literatex-haskell

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cabal-8.2.2.project  cabal-8.4.4.project  cabal-bounds-lower.project  cabal-bounds-upper.project  cabal.project  default.nix  literatex.cabal  shell.nix  stack-8.10.4.yaml  stack-8.10.6.yaml  stack-8.10.7.yaml  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.10.1.yaml  stack-9.12.1.yaml  stack-9.2.1.yaml  stack-9.2.2.yaml  stack-9.2.3.yaml  stack-9.2.4.yaml  stack-9.2.5.yaml  stack-9.2.7.yaml  stack-9.2.8.yaml  stack-9.4.2.yaml  stack-9.4.4.yaml  stack-9.4.5.yaml  stack-9.4.6.yaml  stack-9.4.7.yaml  stack-9.4.8.yaml  stack-9.6.1.yaml  stack-9.6.2.yaml  stack-9.6.3.yaml  (+11 more)
.github/workflows/: ci.yml
app/: LibOA.hs  Main.hs
doc/: literatex.1  literatex.1.md
examples/: highlevel.lhs  lowlevel.hs
pkg/deb/: copyright
project/: TODO.md
project/animation/: .gitignore  LICENSE  Main.hs  Makefile  README.md  default.nix  literatex-animation.cabal  shell.nix
project/log/: 20210523-design.md
project/release/: literatex-haskell-0.1.0.0.md  literatex-haskell-0.1.0.1.md  literatex-haskell-0.1.0.2.md  literatex-haskell-0.2.0.0.md  literatex-haskell-0.2.0.1.md  literatex-haskell-0.2.0.2.md  literatex-haskell-0.2.1.0.md  literatex-haskell-0.3.0.0.md  literatex-haskell-0.4.0.0.md
src/: LiterateX.hs
src/LiterateX/: Parser.hs  Renderer.hs  SourceDefaults.hs  Types.hs
src/LiterateX/Types/: CodeLanguage.hs  SourceFormat.hs  (+2 more)
test/: Spec.hs
(+9 files in other folders)
